Created AspectJ driven line:number prepending to errors with CIB compilation and parsing